--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -72,7 +72,7 @@ body{
 .courses, .articles{
     margin: 10px ; 
 }
-.card{
+.card, #article .card{
     margin:5px 10px;
     padding: 5px 10px;
     width: 200px;
